--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,9 +10,14 @@
     --color-2: #B5B5B5;
     --color-3: white;
     --color-4: #7B7B7B;
+    --color-5: #6F6F6F;
+    --color-6: #999999;
+    --color-7: #464646;
+    --color-8: #aaaaaa;
+    --color-9: #749CF2;
 
     --main-title-size: 48px;
-    --sub-title-size: 18px;
+    --main-sub-title-size: 18px;
     
     --content-min-width: 1200px;
     --article-max-width: 1000px;
@@ -21,7 +26,11 @@
     --mrg-t-l: 15px;
     --mrg-t-m: 30px;
     --mrg-t-h: 50px;
+    --mrg-t-g: 80px;
+    --mrg-t-u: 120px;
 }
+
+*[color="red"]{ color: attr(color color); }
 
 .poppins, .montserrat{
     font-family: "Poppins", sans-serif;
@@ -47,13 +56,21 @@
 .color-2{ color: var(--color-2); }
 .color-3{ color: var(--color-3); }
 .color-4{ color: var(--color-4); }
+.color-5{ color: var(--color-5); }
+.color-6{ color: var(--color-6); }
+.color-7{ color: var(--color-7); }
+.color-8{ color: var(--color-8); }
 
 .main-title{ font-size: var(--main-title-size); }
-.sub-title{ font-size: var(--sub-title-size); }
+.main-sub-title{ font-size: var(--main-sub-title-size); }
+.title{ font-size: 36px; }
+.sub-title{ font-size: 24px; }
 
 .mrg-t-l{ margin-top: var(--mrg-t-l);}
 .mrg-t-m{ margin-top: var(--mrg-t-m);}
 .mrg-t-h{ margin-top: var(--mrg-t-h);}
+.mrg-t-g{ margin-top: var(--mrg-t-g);}
+.mrg-t-u{ margin-top: var(--mrg-t-u);}
 
 body{
     background-image: url("../img/background.png");
@@ -277,4 +294,100 @@ footer{
     --color: linear-gradient(88.33deg, #FB4F4F -7.64%, #FFCD1E 145.94%);
 }
 .status-bar > li:first-of-type{
+}
+
+ul[class*="grid"]{
+    display: grid;
+    column-gap: 45px;
+    row-gap: 35px;
+}
+ul[class*="grid"] > li{
+    --li-text-color: var(--color-8);
+    --border-color: var(--color-8);
+    --border-width: 1px;
+    --image-opacity: 0.5;
+    position: relative;
+    width: 160px;
+    height: 160px;
+    border: var(--border-width) solid var(--border-color);
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    box-sizing: border-box;
+
+    color: var(--li-text-color);
+}
+.grid-2{
+    grid-template-columns: 1fr 1fr;
+}
+li.icon-title-text > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+}
+li.icon-title-text > div::after{
+    content: "";
+    position: absolute;
+    top: -1px;
+    right: -3px;
+    width: 6px;
+    border-bottom: 2px solid var(--color-8);
+}
+li.icon-title-text > div::before{
+    content: "";
+    position: absolute;
+    top: -16px;
+    right: -16px;
+    width: 32px;
+    height: 32px;
+    border-radius: 32px;
+    border: 1px solid var(--border-color);
+    box-sizing: border-box;
+    background-color: white;
+}
+li.icon-title-text.active > div::before{
+    border: none;
+    background: linear-gradient(88.33deg, #8D52FF -7.64%, #5DE1E6 145.94%);
+}
+li.icon-title-text.active > div::after{
+    content: "";
+    position: absolute;
+    top: -8px;
+    right: -4px;
+    width: 6px;
+    height : 10px;
+    border-bottom: 1px solid white;
+    border-right: 1px solid white;
+    transform: rotate(45deg);
+}
+li.icon-title-text.active{
+    --li-text-color: var(--color-7);
+    --border-color: var(--color-9);
+    --image-opacity: 1;
+    --border-width: 2px;
+}
+li.icon-title-text > div > img{
+    opacity: var(--image-opacity);
+}
+li.icon-title-text > div > span:first-of-type{
+    font-size: 20px;
+    margin-top: 0px;
+}
+li.icon-title-text > div > span:last-of-type{
+    font-size: 14px;
+    margin-top: 7px;
+}
+
+button.next-button{
+    width: 240px;
+    height: 60px;
+    border-radius: 60px;
+    background: linear-gradient(88.33deg, #8D52FF -7.64%, #5DE1E6 145.94%);
+    font-size: 18px;
+    border: none;
 }
